--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="16"
+        android:minSdkVersion="17"
         android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
@@ -16,7 +16,9 @@
         android:allowBackup="true"
         android:icon="@drawable/btn3"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+		android:widgetCategory="home_screen|keyguard"         
+        >
         <receiver
             android:name="MyWidget"
             android:icon="@drawable/btn3"
