--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -40,12 +40,17 @@
 		<intent-filter>
             <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
         </intent-filter>
+		
+		<intent-filter>
+			<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" /> 
+		</intent-filter>
         		
         </receiver>
-        <activity android:name="ConfigActivity"  android:icon="@drawable/ic_launcher">
+        <activity android:name="ConfigActivity"  android:icon="@drawable/btn3">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" >
-                </action>
+					
+					</action>
             </intent-filter>
         </activity>
     </application>
