--- a/widget/AndroidManifest.xml
+++ b/widget/AndroidManifest.xml
@@ -41,14 +41,11 @@
             <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
         </intent-filter>
 		
-		<intent-filter>
-			<action android:name="android.hardware.usb.action.USB_ACCESSORY_ATTACHED" /> 
-		</intent-filter>
         		
         </receiver>
         <activity android:name="ConfigActivity"  android:icon="@drawable/btn3">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" >
+                <action android:name="android.intent.action.UMS_CONNECTED" >
 					
 					</action>
             </intent-filter>
